// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/poetry/extract extractPackageFile() can parse empty registries 1`] = `
Array [
  "https://pypi.org/pypi/",
]
`;

exports[`lib/manager/poetry/extract extractPackageFile() can parse missing registries 1`] = `
Array [
  "https://pypi.org/pypi/",
]
`;

exports[`lib/manager/poetry/extract extractPackageFile() extracts multiple dependencies (with dep = {version = "1.2.3"} case) 1`] = `
Array [
  Object {
    "currentValue": "*",
    "datasource": "pypi",
    "depName": "dep1",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": true,
    },
  },
  Object {
    "currentValue": "^0.6.0",
    "datasource": "pypi",
    "depName": "dep2",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": true,
    },
  },
  Object {
    "currentValue": "^0.33.6",
    "datasource": "pypi",
    "depName": "dep3",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": true,
    },
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "",
    "datasource": "pypi",
    "depName": "dep4",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "^0.8.3",
    "datasource": "pypi",
    "depName": "extra_dep1",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.9.4",
    "datasource": "pypi",
    "depName": "extra_dep2",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.4.0",
    "datasource": "pypi",
    "depName": "extra_dep3",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
]
`;

exports[`lib/manager/poetry/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "0.0.0",
    "datasource": "pypi",
    "depName": "dep1_",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "0.0.0",
    "datasource": "pypi",
    "depName": "dep1",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.6.0",
    "datasource": "pypi",
    "depName": "dep2",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.33.6",
    "datasource": "pypi",
    "depName": "dep3",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^3.0",
    "datasource": "pypi",
    "depName": "dev_dep1",
    "depType": "dev-dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "Invalid version.",
    "datasource": "pypi",
    "depName": "dev_dep2",
    "depType": "dev-dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
    "skipReason": "unknown-version",
  },
  Object {
    "currentValue": "^0.8.3",
    "datasource": "pypi",
    "depName": "extra_dep1",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.9.4",
    "datasource": "pypi",
    "depName": "extra_dep2",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
  Object {
    "currentValue": "^0.4.0",
    "datasource": "pypi",
    "depName": "extra_dep3",
    "depType": "extras",
    "managerData": Object {
      "nestedVersion": false,
    },
  },
]
`;

exports[`lib/manager/poetry/extract extractPackageFile() extracts registries 1`] = `
Array [
  "https://pypi.org/pypi/",
  "https://foo.bar/simple/",
  "https://bar.baz/+simple/",
]
`;

exports[`lib/manager/poetry/extract extractPackageFile() handles multiple constraint dependencies 1`] = `
Array [
  Object {
    "currentValue": "",
    "datasource": "pypi",
    "depName": "foo",
    "depType": "dependencies",
    "managerData": Object {
      "nestedVersion": false,
    },
    "skipReason": "multiple-constraint-dep",
  },
]
`;
